2003-12-19  Shiro Kawai  <shiro@acm.org>

	* src/kahua/test/xml.scm
	(match-pattern) : treat attribute node (@ ...) specially; in it,
	patterns match any permutations of the input.

	* test/test-xml.scm : added tests for the above change.

2003-12-19  Nobuo Yamashita  <nobsun@sampou.org>

	* test/lambdabooks.scm:
	
	- Modified call-server/gsid and match&pick to keep sgsid.
	- Improved page checking pattern generation.
	- All pages are NOT YET covered. 

2003-12-15  Nobuo Yamashita  <nobsun@sampou.org>

	* test/lambdabooks.scm:
	Added code testing page transition for anonymous user.
	Still no code for loginuser.
	
2003-12-15  Nobuo Yamashita  <nobsun@sampou.org>

	* test/lambdabooks.scm:
	Added for testing examples/lambdabooks.kahua 
	The test script is work but not yet completed.

	* test/Makefile: 
	Added a entry for lambdabooks.scm.

	* examples/lambdabooks.init: 
	Changed specifyings for loading book.kahua and review.kahua
	to relative paths.

	* examples/Makefile.in:
	Modified command for excuting lambdabooks.init.
	

2003-12-15  Shiro Kawai  <shiro@acm.org>

	* cgi/kahua.cgi.in (compose-reply): sets Path parameter of the state
	session id cookie by the dirname of SCRIPT_NAME, to prevent clients
	from being confused by extra pathname components added after
	kahua.cgi.

2003-12-16  Koichi Sasada <sasada@namikilab.tuat.ac.jp>

	* src/kahua/gsid.scm : modified decompose-gsid to through
	invalid gsid. if called with invalid gsid, return (values #f gsid).

	* src/kahua/server.scm : added kahua-worker-type.

	* src/kahua/html.scm : syntax define-entry is added.
	 and modified a/cont to support named continuation.

	* test/worker.scm, test/gsid.scm, acont.kahua  : added tests to
	test above. worker.scm is added the test of named continuation with
	acont.kahua.

	* examples/lambdabooks.kahua, lambdabooks/books.kahua, 
	lambdabooks/partner.kahua, lambdabooks/useradmin.kahua :
	modified to use named continuation. 